--- a/vite-project/vercel.json
+++ b/vite-project/vercel.json
@@ -3,16 +3,18 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
       "dest": "/dist/$1"
+    },
+    {
+      "src": "/(.*)",
+      "status": 404,
+      "dest": "/dist/index.html"
     }
   ]
 }
