--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -14,6 +15,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.4.0"
-  }
+    "vite": "^4.4.0",
+    "gh-pages": "^6.1.0"
+  },
+  "homepage": "https://yourusername.github.io/repository-name"
 }
